refactor(test): 테스트코드 개선